prevent wrong size of depiction inside menu element

--- a/src/components/Depiction/depiction.scss
+++ b/src/components/Depiction/depiction.scss
@@ -17,6 +17,7 @@ $eccgui-size-depiction-border-radius: $pt-border-radius !default;
     .#{$eccgui}-overviewitem__item > & {
         flex-grow: 0;
         flex-shrink: 0;
+        align-self: stretch;
     }
 
     & + .#{$eccgui}-overviewitem__description {
